# recipe_bank

./: .eleventy.js  .gitignore  CLAUDE.md  README.md  TODO.md  package-lock.json  package.json
.claude/: settings.local.json
Recipes/: AlooPalak_or_SaagAloo.html  Arayes.html  Baked Chicken Parmesan.html  Bastardized_chicken_curry.html  Beef Enchiladas.html  Beef Stroganoff.html  Beef and Spinach Noodles.html  ButterChicken.html  CauliflowerChickenAlfredo.html  Chicken Fricassee.html  Chicken Pan Sauce.html  ChickenCacciatore.html  ChickenEnchiladas.html  ChickenMarsala.html  ChickenOrzoMushroomsAndSpinach.html  ChickenPotPieCasserole.html  ChickenStewandDumplings.html  ChickenTikkaMasala.html  Chilli.html  Cilantro Lime Chicken.html  Coconut-LimeChicken.html  Cornbread.html  CowboyBeans.html  Creamy Tuscan Chicken.html  GarlicCollardGreens.html  GreekLemonPotatoes.html  Hambagu.html  Hamberger_helper.html  Hambāgu.html  Instant Pot Chicken Biryani.html  Instant Pot Chicken Pulao - Tea for Turmeric.html  InstantPotVegetableBiryani.html  KenjiMashedPotatoes.html  KoobidehKebab.html  KoreanGroundBeef.html  (+46 more)
importer/: batch_import.py  pyproject.toml  requirements.txt
importer/recipe_importer/: __init__.py  cli.py  importer.py  manual.py  parsers.py  utils.py
importer/tests/: gen_fixtures.py  test_parsers.py
importer/tests/fixtures/: based_cooking.json  generic_html_flat.json  generic_html_korean.json  generic_html_meatballs.json  generic_html_multi.json  jetpack.json  json_ld.json  json_ld_list.json  serious_eats.json  tasty.json  wprm_html.json  wprm_js.json
(+357 files in other folders)
